--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -4,7 +4,7 @@
     top: 0;           /* Lo coloca en la parte superior */
     left: 0;          /* Alineado a la izquierda */
     width: 100%;      /* Ocupa todo el ancho de la pantalla */
-    background-color: #333;  /* Color de fondo */
+    background: linear-gradient(to right, black,blue, white );  /* Color de fondo */
     color: white;           /* Color del texto */
     padding: 10px 0;        /* Espaciado interno */
     text-align: left;     
